[Add] Sign in page content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,25 @@
 .bg-dark {
   background-color: #1a1a1a;
 }
+.form{
+  background-color: #edf4f6;
+}
+
+.bg-green{
+  background: #bbe432;
+  color: #414141;
+  transition: 0.15s;
+}
+.bg-green:hover{
+  background: #414141;
+  color: #fff;
+}
+.bg-green-inverted{
+  background: #414141;
+  color: #fff;
+  transition: 0.15s;
+}
+.bg-green-inverted:hover{
+  background: #bbe432;
+  color: #414141;
+}
