--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,11 @@ body {
 .form {
   background-color: #edf4f6;
 }
+
+.z-1{z-index: 1;}
+.z-2{z-index: 2;}
+.z-3{z-index: 3;}
+.z-4{z-index: 4;}
+.z-5{z-index: 5;}
+.z-6{z-index: 6;}
+.z-7{z-index: 7;}
