[Add] cart table buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 .bg-green:hover {
   background: #414141;
-  color: #fff;
+  color: #bbe432;
 }
 .bg-green-inverted {
   background: #414141;
