--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,18 @@ body {
   max-width: 100%;
   margin: 0;
   overflow-x: hidden;
+  font-family: 'Poppins', sans-serif;
+  color: #414141;
+}
+input{
+ height: 4rem;
+ padding: 0 1.5rem;
+ transition: 0.15s;
+}
+input:hover,
+input:focus{
+  outline: none;
+  border-bottom: 4px solid #bbe432;
 }
 .bg-dark {
   background-color: #1a1a1a;
