--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #414141;
 }
-input{
+input[type="text"]{
  height: 4rem;
  padding: 0 1.5rem;
  transition: 0.15s;
@@ -14,6 +14,11 @@ input:hover,
 input:focus{
   outline: none;
   border-bottom: 4px solid #bbe432;
+}
+input[type="radio"]:hover,
+input[type="radio"]:focus{
+  outline: none;
+  border: 4px solid #bbe432;
 }
 .bg-dark {
   background-color: #1a1a1a;
